# yaotau

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/yaotau/: CMakeLists.txt  Kconfig
components/yaotau/include/: ota_helper.h
components/yaotau/src/: ota_helper.c  yaotau_http.c  yaotau_http.h  yaotau_semver.c  yaotau_semver.h  yaotau_wifi.c  yaotau_wifi.h
components/yaotau/tools/: start_ota_server.sh  update_ota_payload.sh
main/: app_main.c
serve_me_template/: update_and_start.sh
tools/: yaota_bump_version.py  yaota_write_version_json.py
